RESOLVED FIXED162314
Can't present a payment sheet if a sheet is already active in another window
https://bugs.webkit.org/show_bug.cgi?id=162314
Summary Can't present a payment sheet if a sheet is already active in another window
Anders Carlsson
Reported 2016-09-20 13:53:22 PDT
Can't present a payment sheet if a sheet is already active in another window
Attachments
Patch (2.88 KB, patch)
2016-09-20 14:00 PDT, Anders Carlsson
thorton: review+
Anders Carlsson
Comment 1 2016-09-20 14:00:31 PDT
Tim Horton
Comment 2 2016-09-20 14:35:54 PDT
Comment on attachment 289397 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=289397&action=review > Source/WebKit2/UIProcess/ApplePay/WebPaymentCoordinatorProxy.cpp:52 > + ASSERT(activePaymentCoordinatorProxy != this); Please set to null if the assert is not true.
Anders Carlsson
Comment 3 2016-09-20 14:45:41 PDT
Note You need to log in before you can comment on or make changes to this bug.