Can't present a payment sheet if a sheet is already active in another window https://bugs.webkit.org/show_bug.cgi?id=162314 rdar://problem/27643511

Reviewed by Tim Horton.

Instead of keeping track of whether a sheet is active or not, keep track of its underlying payment coordinator proxy,
so we can hide it and send a cancel event to WebCore if another sheet is being presented.

* UIProcess/ApplePay/WebPaymentCoordinatorProxy.cpp:
(WebKit::WebPaymentCoordinatorProxy::~WebPaymentCoordinatorProxy):
(WebKit::WebPaymentCoordinatorProxy::showPaymentUI):
(WebKit::WebPaymentCoordinatorProxy::didReachFinalState):

Canonical link: https://commits.webkit.org/180325@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@206176 268f45cc-cd09-0410-ab3c-d52691b4dbfc